@@ -17,6 +17,10 @@ java {
     }
 }
 
+compileJava {
+    options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
     antlr group: 'org.antlr', name: 'antlr4', version: '4.13.2'
     implementation project(':obp3-algos')
